Fix #782 - Fix overlapping errors (#804)
* Add Error component

* Refactor error functions to selectors

* Revert lint testing

* Wire up selector so that error / quick info are synchronized

* Fix floating 'arrow'

* Some tweaks to show ErrorIcon

* Resolve error color based on severity

* Style the error items

* Revert test changes to NeovimInstance

* Split out some of the logic into selectors/containers

* Fix up lint errors and fix performance regression in buffer scroll bar

--- a/browser/src/UI/components/QuickInfo.less
+++ b/browser/src/UI/components/QuickInfo.less
@@ -13,6 +13,17 @@
         text-overflow: ellipsis;
         overflow: hidden;
 
+        .diagnostic {
+            margin: 8px;
+
+            display: flex;
+            flex-direction: row;
+
+            .icon-container {
+                margin-right: 8px;
+            }
+        }
+
         .title {
             width: 100%;
             margin: 8px;
